src/test/resources/shell/shellSyntaxErr/variables/badintAssignments1.wacc
# bad integer assignment - whitespace should delimit ints

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  int x = 22 0
